packages/lab/src/tabs-next/TabOverflowList.css
.saltTabOverflow {
  position: relative;
}

.saltTabOverflow-list {
  background: var(--salt-container-primary-background);
  border: var(--salt-size-border) var(--salt-selectable-borderStyle-selected) var(--salt-selectable-borderColor-selected);
  overflow: hidden;
  overflow-y: auto;
  position: absolute;
  z-index: var(--salt-zIndex-flyover);
  box-shadow: var(--salt-overlayable-shadow-popout);
  box-sizing: border-box;
  border-radius: var(--salt-palette-corner, 0);
}

.saltTabOverflow-listContainer {
  display: flex;
  flex-direction: column;
  gap: var(--salt-size-border);
  max-height: inherit;
  min-height: inherit;
}

.saltTabOverflow-list[data-hidden="true"] {
  opacity: 0;
  pointer-events: none;
}

.saltTabOverflow-list .saltTabNext {
  color: var(--salt-content-primary-foreground);
  background: var(--salt-selectable-background);
  font-size: var(--salt-text-fontSize);
  font-weight: var(--salt-text-fontWeight);
  min-height: calc(var(--salt-size-base) + var(--salt-spacing-100));
  padding-left: var(--salt-spacing-100);
  padding-right: var(--salt-spacing-100);
  display: flex;
  gap: var(--salt-spacing-100);
  position: relative;
  align-items: center;
  cursor: var(--salt-selectable-cursor-hover);
  box-sizing: border-box;
  flex-shrink: 0;
  justify-content: flex-start;
}

.saltTabOverflow-list .saltTabNext .saltTabNextTrigger {
  justify-content: start;
}

.saltTabOverflow-list .saltTabNext::after {
  display: none;
}

.saltTabOverflow-list .saltTabNext[aria-disabled="true"] {
  color: var(--salt-content-primary-foreground-disabled);
  cursor: var(--salt-selectable-cursor-disabled);
}

.saltTabOverflow-list .saltTabNext-focusVisible {
  outline: var(--salt-focused-outline);
  outline-offset: calc(var(--salt-size-border) * -2);
}

.saltTabOverflow-list .saltTabNext:hover {
  background: var(--salt-selectable-background-hover);
}

.saltTabOverflow-list .saltTabNext:active {
  background: var(--salt-selectable-background-selected);
  box-shadow: 0 calc(var(--salt-size-border) * -1) 0 0 var(--salt-selectable-borderColor-selected), 0 var(--salt-size-border) 0 0 var(--salt-selectable-borderColor-selected);
}

